Use the standard -webkit-autofill color on iOS https://bugs.webkit.org/show_bug.cgi?id=182182
Reviewed by Tim Horton.

Source/WebCore:

* css/html.css:
(input:-webkit-autofill, input:-webkit-autofill-strong-password):

LayoutTests:

Update test expectations.

* platform/ios/fast/forms/auto-fill-button/input-strong-confirmation-password-auto-fill-button-expected.txt:
* platform/ios/fast/forms/auto-fill-button/input-strong-password-auto-fill-button-expected.txt:


Canonical link: https://commits.webkit.org/198020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227711 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -665,11 +665,7 @@ input:-webkit-autofill-strong-password {
 }
 
 input:-webkit-autofill, input:-webkit-autofill-strong-password {
-#if defined(WTF_PLATFORM_IOS) && WTF_PLATFORM_IOS
-    background-color: #F7EC87 !important;
-#else
     background-color: #FAFFBD !important;
-#endif
     background-image: none !important;
     color: #000000 !important;
 }
